[project]
name = "oepnv-topo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "geopy>=2.4.0",
    "networkx>=3.0",
    "folium>=0.15.0",
    "geopandas>=0.14.0",
    "alphashape>=1.3.0",
]
